# nom-rs

./: Cargo.toml  flake.nix  package.nix  shell.nix
.github/workflows/: rust.yml
src/: ansi.rs  build_reports.rs  builds.rs  cache_id.rs  drv_file.rs  io_loop.rs  lib.rs  main.rs  nix_message.rs  parser_json.rs  parser_old.rs  print.rs  state.rs  table.rs  time.rs  tree.rs  update.rs
tests/: golden.rs  parsing.rs  rendering.rs  state_machine.rs
