[package]
name = "nix-output-monitor"
version = "1.0.0"
edition = "2024"
description = "Processes output of Nix commands to show helpful and pretty information"
license = "AGPL-3.0-or-later"

[lib]
name = "nix_output_monitor"
path = "src/lib.rs"

[[bin]]
name = "nom"
path = "src/main.rs"

[dependencies]
serde_json = "1"
crossterm = "0.29"
dirs = "6"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
ctrlc = "3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[lints.rust]
unsafe_code = "deny"
dead_code = "deny"
unused_imports = "deny"
unused_variables = "deny"
unused_mut = "deny"
